syntax = "proto3";

package user;

import "commons.proto";
import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message CreateUserInput {
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message UpdateUserInput {
  string id = 1;
  User data = 2;
}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc findAll (Query) returns (UserList) {}
  rpc findOne (Query) returns (User) {}
  rpc count (Query) returns (User) {}
  rpc create (CreateUserInput) returns (User) {}
  rpc update (UpdateUserInput) returns (User) {}
  rpc destroy (Id) returns (google.protobuf.Empty) {}
}